css: added style to scrollbar on entire website feat: added new options to select menu, new socialmedia and unlimited option feat: added Footer component to website layout fix: fixed unique words and paragraphs counter which counted white spaces and special characters css: small fixes in components positions and their responsivity

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,27 @@ body {
   height: 100vh;
 }
 
+* {
+  scrollbar-width: thin;
+  scrollbar-color: var(--primary-color) var(--background-color);
+}
+
+::-webkit-scrollbar {
+  width: 6px;
+}
+
+::-webkit-scrollbar-track {
+  background: var(--background-color);
+}
+
+::-webkit-scrollbar-thumb {
+  background: var(--primary-color);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background: var(--secondary-color);
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
